# bipedal-planner

./: .gitignore  README.md  compare_controllers.py  contact_schedule.py  debug_mpc_infeasibility.py  footstep.py  planner.py  preview_controller.py  pyproject.toml  stability.py  stage1_main.py  stage2_main.py  stage3_main.py  traj_visualizer.py  visualizer.py  world.py
python/: LQR.ipynb
robot/: config.py  kinematics.py
stage1/: footstep.py  planner.py  stability.py  visualizer.py  world.py
stage1/planners/: __init__.py  astar.py  base.py  rrt.py  theta_star.py
stage2/: contact_schedule.py  lipm.py  preview_controller.py  traj_optimizer.py  traj_visualizer.py
stage3/: simulator.py
stage3/controllers/: __init__.py  base.py  lqr.py  mpc.py
tests/: test_contact_schedule.py  test_footstep.py  test_lipm.py  test_planner.py  test_planners_rrt.py  test_preview_controller.py  test_robot.py  test_slippery_scenario.py  test_stability.py  test_stage3_controllers.py  test_stage3_simulator.py  test_traj_optimizer.py  test_world.py
viz/: __init__.py  blueprint.py  primitives.py  stage1_viz.py  stage2_viz.py  stage3_viz.py
